--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio2022",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -7,18 +7,13 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@types/three": "^0.139.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.49.9",
-    "three": "^0.139.0"
-  },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
+  },
+  "dependencies": {
+    "@types/three": "^0.139.0",
+    "sass": "^1.50.0",
+    "three": "^0.139.2"
   }
 }
