--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/three": "^0.139.0",
+    "@vite/vitejs": "^2.3.18",
     "debounce": "^1.2.1",
     "sass": "^1.50.0",
     "three": "^0.139.2"
